changes in notify model
