# src/config/swagger-output.json
@@ -4453,6 +4453,47 @@
           }
         }
       }
+    },
+    "/analytics/get-analytics-data": {
+      "post": {
+        "tags": [
+          "14.Analytics"
+        ],
+        "summary": "Get ANalytics Data",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Analytics data fetched successfully"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": false,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "user_id": {
+                    "type": "string",
+                    "example": "USER_Yl_e5736"
+                  },
+                  "type": {
+                    "type": "string",
+                    "example": "appointment"
+                  },
+                  "c_status": {
+                    "type": "string",
+                    "example": "pending"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
